[package]
name = "rusted-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17" # Web framework that focuses on ergonomics and modularity.
tokio = { version = "1.0", features = ["full"] } # Event-driven, non-blocking I/O platform.